<resources>
    <string name="app_name">Music Player</string>
    <string name="back_button">Back Button</string>
    <string name="music_player">Music Player</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="equalizer_button">Equalizer Button</string>
    <string name="timer_button">Timer Button</string>
    <string name="share_button">Share Button</string>
    <string name="favorite">Favorite</string>
    <string name="playlist">Playlist</string>
</resources>